# toml_s7

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.bzl  MODULE.bazel  MODULE.bzl  README.adoc  README.md
.config/: user.bazelrc
config/: BUILD.bazel
config/cc/: BUILD.bzl  CONFIG.bzl
lib/: BUILD.bazel  libtoml_s7.c  toml_array_s7.c  toml_datetime_s7.c  toml_table_s7.c
src/: BUILD.bazel  README.adoc  ansi_colors.h  libtoml_s7.c  toml_array_s7.c  toml_datetime_s7.c  toml_table_s7.c  trace_dev.h
src/clibgen/: BUILD.bazel  README.adoc
test/: BUILD.bazel  MODULE.bazel  README.adoc  common.h  macros.h  toml_arrays_test.c  toml_conversion_alist_test.c  toml_conversion_ht_test.c  toml_datetimes_test.c  toml_maps_test.c  toml_readers_test.c  toml_serialization_test.c  toml_strings_test.c
test/data/: BUILD.bazel
