load("@cc_config//:MACROS.bzl", "repo_paths")

PROD_REPOS = [
    "@tomlc//src:tomlc",
    "@liblogc//src:logc",
    "@libs7//src:s7",
]

repo_paths(
    name = "repo_paths",
    repos = PROD_REPOS
)

repo_paths(
    name = "test_repo_paths",
    repos = PROD_REPOS + [
        "@gopt//src:gopt",
        "@s7_tools//src:s7plugin_test_config",
        "@unity//src:unity",
        "@uthash//src:uthash",
    ]
)
