load("@libs7//plugin:CONFIG.bzl", "PLUGIN_TEST_DEPS")
load("@libs7//plugin:MACROS.bzl", "s7_repo_paths")

PROD_REPOS = [
    "@tomlc//src:tomlc",
]

s7_repo_paths(
    name = "repo_paths",
    repos = PROD_REPOS
)

s7_repo_paths(
    name = "test_repo_paths",
    repos = PROD_REPOS + PLUGIN_TEST_DEPS
)
