TOML_S7_VERSION = "0.1.0"
module(
    name = "toml_s7",
    version = TOML_S7_VERSION,
    compatibility_level = 0
)

LIBS7_VERSION = "0.1.0"

GOPT_VERSION = "10.0.0"
LIBLOGC_VERSION = "1.0.0"
MAKEHEADERS_VERSION = "1.0.0"
PLATFORMS_VERSION = "0.0.6"
UNITY_VERSION = "2.5.2"
UTHASH_VERSION = "2.3.0"

bazel_dep(name = "platforms", version = PLATFORMS_VERSION)
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "cc_config",    version = "1.0.0")

bazel_dep(name = "makeheaders", version = MAKEHEADERS_VERSION)

S7_TOOLS_VERSION = "1.0.0"
bazel_dep(name = "s7_tools", version = S7_TOOLS_VERSION, dev_dependency=True)

bazel_dep(name = "gopt", version = GOPT_VERSION, dev_dependency=True)
bazel_dep(name = "uthash", version = UTHASH_VERSION, dev_dependency=True)
bazel_dep(name = "liblogc",  version = LIBLOGC_VERSION)
bazel_dep(name = "unity",  version = UNITY_VERSION, dev_dependency=True)

bazel_dep(name = "tomlc", version = "1.0.0")
bazel_dep(name = "libs7", version = LIBS7_VERSION)
