load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("@libs7//plugin:MACROS.bzl", "s7_plugin", "s7_library")

load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE",
     "define_module_version")

DEPS = ["@tomlc//lib:tomlc"]
COPTS = BASE_COPTS + ["-I$(GENDIR)/lib"]
LINKOPTS   = BASE_LINKOPTS + []
DEFINES    = PROFILE

# exports_files(["trace_dev.h"]) # for testing

################################################################
s7_plugin(
    name       = "toml_s7",
    srcs       = ["libtoml_s7.c", ":mkhdrs"],
    hdrs       = [":toml_s7.h"],
    deps       = DEPS + [
        ":toml_array",
        ":toml_datetime",
        ":toml_table",
    ],
    includes = ["."],
    copts = COPTS,
    local_defines = define_module_version(),
    defines = DEFINES,
    visibility = ["//visibility:public"]
)

cc_shared_library(
    name  = "toml_s7_dso",
    shared_lib_name = select({
        "@platforms//os:macos": "libtoml_s7.dylib",
        "@platforms//os:linux": "libtoml_s7.so",
        # "@platforms//os:windows": "libtoml_s7.dll",
        "//conditions:default": "libtoml_s7.so"
    }),
    deps = [":toml_s7"],
    visibility = ["//visibility:public"]
)

################################################################
s7_library(
    name  = "toml_array",
    srcs  = ["toml_array_s7.c", ":mkhdrs"],
    includes = ["."],
    deps  = DEPS,
    local_defines = define_module_version(),
    defines = DEFINES,
    copts = COPTS,
)

s7_library(
    name  = "toml_datetime",
    srcs  = ["toml_datetime_s7.c", ":mkhdrs"],
    includes = ["."],
    deps  = DEPS,
    local_defines = define_module_version(),
    defines = DEFINES,
    copts = COPTS,
)

s7_library(
    name  = "toml_table",
    srcs  = ["toml_table_s7.c", ":mkhdrs"],
    includes = ["."],
    deps  = DEPS,
    local_defines = define_module_version(),
    defines = DEFINES,
    copts = COPTS,
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "libtoml_s7.c",
        "toml_array_s7.c",
        "toml_datetime_s7.c",
        "toml_table_s7.c"
    ],
    additional_srcs = [
        "@makeheaders//logging:ansi_colors.h"
    ] + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@libs7//logging:s7_macros_debug.h",
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@libs7//logging:s7_macros_ndebug.h",
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)

makeheaders(
    name = "export_hdr",
    out  = "toml_s7.h",
    export_interface = True,
    hdrs_srcs = [
        "libtoml_s7.c",
        "toml_array_s7.c",
        "toml_datetime_s7.c",
        "toml_table_s7.c"
    ],
    additional_srcs = [
        "@makeheaders//logging:ansi_colors.h"
    ] + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@libs7//logging:s7_macros_debug.h",
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@libs7//logging:s7_macros_ndebug.h",
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)
