load("@makeheaders//src:RULES.bzl", "makeheaders")

load("//config/cc:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS",
     "BASE_COPTS", "BASE_INCLUDE_PATHS",
     "BASE_DEFINES", "BASE_LINKOPTS")

SRCS = BASE_SRCS
DEPS = BASE_DEPS + ["@tomlc//src:tomlc"]
INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
    "-I$(@tomlc)/src",
    "-I$(GENDIR)/$(@)/src"
]
COPTS         = BASE_COPTS + INCLUDE_PATHS
TOOLCHAINS = ["//:repo_paths"]
exports_files(["trace_dev.h"]) # for testing

################################################################
cc_library(
    name       = "toml_s7",
    linkstatic = True,
    alwayslink = True,
    srcs       = SRCS + ["libtoml_s7.c", ":mkhdrs"],
    hdrs       = [":toml_s7.h"],
    deps       = DEPS + [
        ":toml_array",
        ":toml_datetime",
        ":toml_table",
    ],
    copts      = COPTS,
    toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

cc_shared_library(
    name  = "toml_s7_dso",
    shared_lib_name = select({
        "@platforms//os:macos": "libtoml_s7.dylib",
        "@platforms//os:linux": "libtoml_s7.so",
        # "@platforms//os:windows": "libtoml_s7.dll",
        "//conditions:default": "libtoml_s7.so"
    }),
    deps = [":toml_s7"],
    visibility = ["//visibility:public"]
)

################################################################
cc_library(
    name  = "toml_array",
    linkstatic = True,
    alwayslink = True,
    srcs  = SRCS + [
        "toml_array_s7.c",
        ":mkhdrs",
    ],
    deps  = DEPS,
    copts = COPTS,
    toolchains = TOOLCHAINS,
)

cc_library(
    name  = "toml_datetime",
    linkstatic = True,
    alwayslink = True,
    srcs  = [
        "toml_datetime_s7.c",
        ":mkhdrs",
    ],
    deps  = DEPS,
    copts = COPTS,
    toolchains = TOOLCHAINS,
)

cc_library(
    name  = "toml_table",
    linkstatic = True,
    alwayslink = True,
    srcs  = [
        "toml_table_s7.c",
        ":mkhdrs"
    ],
    deps  = DEPS,
    copts = COPTS,
    toolchains = TOOLCHAINS,
)

################################################################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "libtoml_s7.c",
        "toml_array_s7.c",
        "toml_datetime_s7.c",
        "toml_table_s7.c"
    ],
    additional_srcs = select({
        "//config/profile:dev?": [
            ":ansi_colors.h",
            ":trace_dev.h"
        ],
        "//conditions:default": [
            ":trace_prod.h"
        ]
    })
)

makeheaders(
    name = "export_hdr",
    out  = "toml_s7.h",
    export_interface = True,
    hdrs_srcs = [
        "libtoml_s7.c",
        "toml_array_s7.c",
        "toml_datetime_s7.c",
        "toml_table_s7.c"
    ],
    additional_srcs = select({
        "//config/profile:dev?": [
            ":ansi_colors.h",
            ":trace_dev.h"
        ],
        "//conditions:default": [
            ":trace_prod.h"
        ]
    })
)
