load("@makeheaders//src:RULES.bzl", "makeheaders")
load("@libs7//plugin:MACROS.bzl", "s7_plugin", "s7_library")

DEPS = ["@tomlc//src:tomlc"]
COPTS = ["-I$(@tomlc)/src", "-I$(GENDIR)/$(@)/src"]
LINKOPTS   = []
DEFINES    = []
TOOLCHAINS = ["//:repo_paths"]

exports_files(["trace_dev.h"]) # for testing

################################################################
s7_plugin(
    name       = "toml_s7",
    srcs       = ["libtoml_s7.c", ":mkhdrs"],
    hdrs       = [":toml_s7.h"],
    deps       = DEPS + [
        ":toml_array",
        ":toml_datetime",
        ":toml_table",
    ],
    copts = COPTS,
    toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

cc_shared_library(
    name  = "toml_s7_dso",
    shared_lib_name = select({
        "@platforms//os:macos": "libtoml_s7.dylib",
        "@platforms//os:linux": "libtoml_s7.so",
        # "@platforms//os:windows": "libtoml_s7.dll",
        "//conditions:default": "libtoml_s7.so"
    }),
    deps = [":toml_s7"],
    visibility = ["//visibility:public"]
)

################################################################
s7_library(
    name  = "toml_array",
    srcs  = ["toml_array_s7.c", ":mkhdrs"],
    deps  = DEPS,
    copts = COPTS,
    toolchains = TOOLCHAINS,
)

s7_library(
    name  = "toml_datetime",
    srcs  = ["toml_datetime_s7.c", ":mkhdrs"],
    deps  = DEPS,
    copts = COPTS,
    toolchains = TOOLCHAINS,
)

s7_library(
    name  = "toml_table",
    srcs  = ["toml_table_s7.c", ":mkhdrs"],
    deps  = DEPS,
    copts = COPTS,
    toolchains = TOOLCHAINS,
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "libtoml_s7.c",
        "toml_array_s7.c",
        "toml_datetime_s7.c",
        "toml_table_s7.c"
    ],
    additional_srcs = select({
        "//config/profile:dev?": [
            ":ansi_colors.h",
            ":trace_dev.h"
        ],
        "//conditions:default": [
            ":trace_prod.h"
        ]
    })
)

makeheaders(
    name = "export_hdr",
    out  = "toml_s7.h",
    export_interface = True,
    hdrs_srcs = [
        "libtoml_s7.c",
        "toml_array_s7.c",
        "toml_datetime_s7.c",
        "toml_table_s7.c"
    ],
    additional_srcs = select({
        "//config/profile:dev?": [
            ":ansi_colors.h",
            ":trace_dev.h"
        ],
        "//conditions:default": [
            ":trace_prod.h"
        ]
    })
)
