load("//config/cc:BUILD.bzl",
     # "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
     # "BASE_COPTS",
     "BASE_DEFINES", "BASE_LINKOPTS")

load("@libs7//plugin:MACROS.bzl", "s7_plugin_test")

SRCS = ["//src:trace_dev.h", "macros.h"]
DEPS = ["//src:toml_s7"]
COPTS = ["-Isrc", "-Wno-gnu-statement-expression"]

DEFINES    = BASE_DEFINES
LINKOPTS   = BASE_LINKOPTS
TOOLCHAINS = ["//:test_repo_paths"]
TIMEOUT    = "short"
TAGS       = ["toml"]

################################################################
test_suite(
    name  = "test",
    tests = [
        ":arrays",
        # ":conversion_alist",
        ":conversion_ht",
        ":datetimes",
        ":maps",
        ":readers",
        ":serialization",
        ":strings",
    ]
)

################################################################
s7_plugin_test(
    name          = "arrays",
    srcs          = SRCS + ["toml_arrays_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays"]
)

s7_plugin_test(
    name          = "conversion_alist",
    srcs          = SRCS + ["toml_conversion_alist_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

s7_plugin_test(
    name          = "conversion_ht",
    srcs          = SRCS + ["toml_conversion_ht_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

s7_plugin_test(
    name          = "datetimes",
    srcs          = SRCS + ["toml_datetimes_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["datetime"]
)

s7_plugin_test(
    name          = "maps",
    srcs          = SRCS + ["toml_maps_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps"]
)

s7_plugin_test(
    name          = "readers",
    srcs          = SRCS + ["toml_readers_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["readers"]
)

s7_plugin_test(
    name          = "serialization",
    srcs          = SRCS + ["toml_serialization_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["serialization"]
)

s7_plugin_test(
    name          = "strings",
    srcs          = SRCS + ["toml_strings_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["strings"]
)

