load("//config/cc:BUILD.bzl",
     # "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
     # "BASE_COPTS",
     "BASE_DEFINES", "BASE_LINKOPTS")

load("@libs7//plugin:MACROS.bzl", "s7_plugin_test")

SRCS = ["macros.h", "//src:trace_dev.h"]
DEPS = ["//src:toml_s7"]
COPTS = ["-Isrc", "-Wno-gnu-statement-expression"]

DEFINES    = BASE_DEFINES
LINKOPTS   = BASE_LINKOPTS
TOOLCHAINS = ["//:test_repo_paths"]
TIMEOUT    = "short"
TAGS       = ["toml"]

################################################################
test_suite(
    name  = "test",
    tests = [
        ":arrays_test",
        # ":conversion_alist",
        ":conversion_ht_test",
        ":datetimes_test",
        ":maps_test",
        ":readers_test",
        ":serialization_test",
        ":strings_test",
    ]
)

################################################################
s7_plugin_test(
    name          = "arrays_test",
    srcs          = SRCS + ["toml_arrays_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays"]
)

s7_plugin_test(
    name          = "conversion_alist",
    srcs          = SRCS + ["toml_conversion_alist_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

s7_plugin_test(
    name          = "conversion_ht_test",
    srcs          = SRCS + ["toml_conversion_ht_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

s7_plugin_test(
    name          = "datetimes_test",
    srcs          = SRCS + ["toml_datetimes_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["datetime"]
)

s7_plugin_test(
    name          = "maps_test",
    srcs          = SRCS + ["toml_maps_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps"]
)

s7_plugin_test(
    name          = "readers_test",
    srcs          = SRCS + ["toml_readers_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["readers"]
)

s7_plugin_test(
    name          = "serialization_test",
    srcs          = SRCS + ["toml_serialization_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["serialization"]
)

s7_plugin_test(
    name          = "strings_test",
    srcs          = SRCS + ["toml_strings_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["strings"]
)

