load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("@libs7//plugin:MACROS.bzl", "s7_plugin_test")
load("//config/cc:CONFIG.bzl",
     "BASE_COPTS", "BASE_LINKOPTS", "PROFILE")

SRCS = ["macros.h"] # , "//lib:trace_dev.h"]
DEPS = ["//lib:toml_s7"]
COPTS = BASE_COPTS + [
    "-Ilib",
    "-Wno-gnu-statement-expression",
    "-I$(GENDIR)/test"
]

DEFINES    = PROFILE
LINKOPTS   = BASE_LINKOPTS

TIMEOUT    = "short"
TAGS       = ["toml"]

################################################################
test_suite(
    name  = "test",
    tests = [
        ":arrays_test",
        # ":conversion_alist_test",
        ":conversion_ht_test",
        ":datetimes_test",
        ":maps_test",
        ":readers_test",
        ":serialization_test",
        ":strings_test",
    ]
)

################################################################
s7_plugin_test(
    name          = "arrays_test",
    srcs          = SRCS + ["toml_arrays_test.c", ":mkhdrs"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    defines       = DEFINES,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays"]
)

# s7_plugin_test(
#     name          = "conversion_alist_test",
#     srcs          = SRCS + ["toml_conversion_alist_test.c"],
#     deps          = DEPS,
#     copts         = COPTS,
#     linkopts      = LINKOPTS,
#     local_defines = DEFINES,
#     timeout       = TIMEOUT,
#     tags          = TAGS + ["maps", "conversion"]
# )

s7_plugin_test(
    name          = "conversion_ht_test",
    srcs          = SRCS + ["toml_conversion_ht_test.c", ":mkhdrs"],
    deps          = DEPS,
    copts         = COPTS,
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

s7_plugin_test(
    name          = "datetimes_test",
    srcs          = SRCS + ["toml_datetimes_test.c", ":mkhdrs"],
    deps          = DEPS,
    copts         = COPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["datetime"]
)

s7_plugin_test(
    name          = "maps_test",
    srcs          = SRCS + ["toml_maps_test.c", ":mkhdrs"],
    deps          = DEPS,
    copts         = COPTS,
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps"]
)

s7_plugin_test(
    name          = "readers_test",
    srcs          = SRCS + ["toml_readers_test.c", ":mkhdrs"],
    deps          = DEPS,
    copts         = COPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    linkopts      = LINKOPTS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["readers"]
)

s7_plugin_test(
    name          = "serialization_test",
    srcs          = SRCS + ["toml_serialization_test.c", ":mkhdrs"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    timeout       = TIMEOUT,
    tags          = TAGS + ["serialization"]
)

s7_plugin_test(
    name          = "strings_test",
    srcs          = SRCS + ["toml_strings_test.c", ":mkhdrs"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    data          = ["//test/data:toml"],
    local_defines = DEFINES,
    timeout       = TIMEOUT,
    tags          = TAGS + ["strings"]
)

########
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "toml_arrays_test.c",
        "toml_conversion_ht_test.c",
        "toml_datetimes_test.c",
        "toml_maps_test.c",
        "toml_readers_test.c",
        "toml_serialization_test.c",
        "toml_strings_test.c"
    ],
    additional_srcs = [
        "@liblogc//macros:ansi_colors.h"
    ] + select({
        "@obazl_tools_cc//profile:dev?": [
            "@libs7//macros:s7_logging_debug.h",
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@libs7//macros:s7_logging_ndebug.h",
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
)
